--- a/css/styles.css
+++ b/css/styles.css
@@ -768,6 +768,9 @@ body {
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     background-image 250ms cubic-bezier(0.4, 0, 0.2, 1), var(--bgc-transition);
 }
+.modal-user-agreement:focus + .modal-check {
+  border: 1.8px solid #2196f3;
+}
 .modal-user-agreement:checked + .modal-check {
   background-image: url(../images/optimize-svg/icon-check.svg);
   background-color: var(--secondary-btn-bgc-color);
